# jinjian-bazi

./: .gitignore  .pre-commit-config.yaml  .skills_prompt_snapshot.json  AGENTS.md  BOOTSTRAP.md  HERMES.md  README.md  RELEASE_NOTES.md  SOUL.md  TASK.md  USER.md  audit_report_geju_shishen.md  audit_report_hunyin_shiye_jiankang.md  check_report.py  check_report2.py  check_sections.py  cross_validation_report.md  full_audit.py  preflight.sh  quick_test.py  rollback.sh  setup-devops.sh  test_playwright.py  test_playwright2.py  test_playwright3.py  test_verify.py  text_zhuanlan.zhihu.com_p_620842906_盲派寻根基_20260714_014330.json  text_zhuanlan.zhihu.com_p_648275992_十神归属权_20260714_014333.json  text_zhuanlan.zhihu.com_p_650622273_寻根基找出处_20260714_014336.json  text_盲派十神归属权_648275992_20260714_014316.json  text_盲派寻根基找出处_650622273_20260714_014318.json  text_盲派寻根基断事秘诀_620842906_20260714_014311.json  verification_evidence.db-shm  verification_evidence.db-wal  verify_v83.py  金鉴真人_知识来源清单_全量审计_20260614.md
projects/bazi-platform/: Dockerfile  GIT_CONVENTION.md  README.md  pyproject.toml  rollback.sh  run.sh  setup-deploy.sh
projects/bazi-platform/.github/workflows/: ci-cd.yml
projects/bazi-platform/.hermes/config/: credentials.md
projects/bazi-platform/api/: main.py  observability.py  requirements.txt
projects/bazi-platform/api/repositories/: analysis_repo.py
projects/bazi-platform/api/routers/: analyze.py  health.py  history.py
projects/bazi-platform/api/schemas/: response.py
projects/bazi-platform/api/services/: analysis_service.py  engine_client.py
projects/bazi-platform/audit_reports/: family_audit_report_20260705.md  misfortune_analysis_vs_skill_audit.json
projects/bazi-platform/backend/: main.py  requirements.txt
projects/bazi-platform/backend/app/: database.py  models.py  schemas.py
projects/bazi-platform/database/: connection.py  schema.sql
projects/bazi-platform/docs/: architecture.md  performance-baseline.md
projects/bazi-platform/engine/: _gen_detail_analysis.py  audit_cai_xing_report.json  audit_character_20260705.md  audit_marriage_v2_report.json  character.py  comprehensive_v2.py  da_yun.py  education.py  family.py  ge_ju.py  generate_deep_report.py  health_v2.py  health_v2_audit_report.json  liu_nian_v2.py  lunar.py  paipan.py  pipeline_v5.py  report_generator.py  shen_qiang_ruo.py  shi_shen.py  物理化八字分析管线_设计方案.md
projects/bazi-platform/engine/archive/: audit_report_content.py  dimensions_v2.py  liu_nian.py  pipeline_product.py  pipeline_v3.py  report_standard_gen.py
projects/bazi-platform/engine/tests/: test_e2e.py  (+5 more)
projects/bazi-platform/frontend/: package.json  test-report.html  vite.config.js
projects/bazi-platform/scripts/: audio_pipeline.py  batch_score_test.py  bazi-audit.py  bazi-dayun-verify.py  bazi-delegate-check.sh  bazi-education-verify.py  bazi-engine.py  bazi-format-check.py  bazi-full-verify.py  bazi-full-verify.sh  bazi-gate.py  bazi-init-master-data.py  bazi-must-run-engine.sh  bazi-must-verify.sh  bazi-pipeline.sh  bazi-report-validator.py  bazi-verify.py  bazi-wenchang-check.sh  bazi-zydx-verify.sh  delivery-gate.py  engineered_workflow_ref.md  family_bazi_data.json  loop-engineering-wealth.py  loop-engineering.sh  nayin.py  pillar-verify.py  run-with-gate.sh  transcribe_audio.py  update_foundation_skill.py  validate_report.py
(+880 files in other folders)
